2.4.1:
------

- Added support for "RTMPE" Flash protocol
- Added a confirmation dialog before cleaning the downloads list
- Added a confirmation dialog before deleting a download
- Added possibility to paste from clipboard more than one url at same time (separated in lines)
- Added possibility to drop more than one url at same time (separated in lines)

- Updated japanese translation
- Updated german translation
- Updated italian translation

- Added one new plugin:
	- XHamster (thanks to Supelex Technologies)

- Changed plug-in:
	- Aniboom
	- Atom
	- Break
	- Caught on Tape (before known as Caught on Video)
	- Cinemavip
	- DailyMotion
	- Disclose
	- Shred or Die
	- Streetfire
	- Keezmovies
	- XHamster
	- XTube

- Improved the internal management of the download lists

- Fixed bug (Error: Custom video conversion was ignored if conversion videos option was disabled)

Plug-ins SDK:
-------------

- Fixed bug (Error: The empty selections were not detected by "copyBetween" function)

Mac OS X:
---------

- Compiled with Qt 4.6.3

- Fixed bug (Error: Modal sheets were not responding to mouse events correctly)

2.4:
----

- The Http core has been fully rewritten from scratch, the result is a better performance and stability:
	- The latest Qt4 tecnologies are used
	- Added gzip support
	- Added more explicative errors
	- Imporved the time-out control
	- Improved the proxy support
	- Improved the cookies support
	- Reduced the CPU usage

- Added the "What's new" functionality
- Added the winPenPack in credits window
- Added video items multiselection manipulation
- Added possibility to queue downloads
- Added the "Error code" in bug-report sent information
- Added Network configuration options
- Added Russian translation (thanks to h31)

- Improved the automatic updates
- Improved the image previewer (search videos)

- Revised English translation
- Revised Spanish translation
- Revised Catalan translation
