@@ -31,6 +31,8 @@
         <file>images/pencil.png</file>
         <file>images/clock.png</file>
         <file>images/search.png</file>
+        <file>images/select_file.png</file>
+        <file>images/urls_file.png</file>
     </qresource>
     <qresource prefix="/error">
         <file>images/errorVideo.png</file>
