@@ -40,7 +40,8 @@ FORMS = ui/addvideo.ui \
     ui/changelog.ui \
     ui/searchvideosnoresults.ui \
     ui/winvistadownloadsmsg.ui \
-    ui/whatsnew.ui
+    ui/whatsnew.ui \
+    ui/multiurls.ui
 HEADERS = src/forms/addvideoimpl.h \
     src/forms/searchvideositemimpl.h \
     src/forms/bugreportimpl.h \
@@ -69,6 +70,7 @@ HEADERS = src/forms/addvideoimpl.h \
     src/forms/searchvideosnoresultsimpl.h \
     src/forms/winvistadownloadsmsgimpl.h \
     src/forms/whatsnewimpl.h \
+	src/forms/multiurlsimpl.h \
     src/pakunpak/pakunpak.h \
     src/searchvideosscriptclass.h \
     src/checkupdatesworker.h \
@@ -93,7 +95,7 @@ HEADERS = src/forms/addvideoimpl.h \
     src/videoitem.h \
     src/videolistcontroller.h \
     src/xprogressbar.h \
-    src/rtmp.h
+	src/rtmp.h
 SOURCES = src/forms/addvideoimpl.cpp \
     src/forms/searchvideositemimpl.cpp \
     src/forms/bugreportimpl.cpp \
@@ -122,6 +124,7 @@ SOURCES = src/forms/addvideoimpl.cpp \
     src/forms/searchvideosnoresultsimpl.cpp \
     src/forms/winvistadownloadsmsgimpl.cpp \
     src/forms/whatsnewimpl.cpp \
+	src/forms/multiurlsimpl.cpp \
     src/searchvideosscriptclass.cpp \
     src/checkupdatesworker.cpp \
     src/http.cpp \
@@ -145,7 +148,7 @@ SOURCES = src/forms/addvideoimpl.cpp \
     src/videoitem.cpp \
     src/videolistcontroller.cpp \
     src/xprogressbar.cpp \
-    src/rtmp.cpp
+	src/rtmp.cpp
 TRANSLATIONS = resources/translations/xVST_br.ts \
     resources/translations/xVST_ca.ts \
     resources/translations/xVST_cz.ts \
